@@ -138,6 +138,12 @@ ObjectID.prototype.__defineGetter__("generationTime", function() {
   return Math.floor(BinaryParser.decodeInt(this.id.substring(0,4), 32, true, true));
 });
 
+ObjectID.prototype.getTimestamp = function() {
+  var timestamp = new Date();
+  timestamp.setTime(Math.floor(BinaryParser.decodeInt(this.id.substring(0,4), 32, true, true)) * 1000);
+  return timestamp;
+}
+
 /**
  * Statics.
  */
